# TAAD

./: .gitignore  CLAUDE.md  Implementation_Plan_All_Sections.md  LICENSE  PHASE_5_IMPLEMENTATION_PROMPT.md  README.md  SPEC_TRADING_SYSTEM.md  alembic.ini  create_database.py  execute_validated_trades.sh  main.py  makefile  manage_cache.py  pyproject.toml  requirements.txt  setup.sh  test_connection_pool.py  test_event_loop_fix.py  test_filters.py  test_historical_cache.py  test_historical_executions.py  test_ibkr_connection.py  test_index_menu.py  test_langgraph_simulation.py  test_options_validation.py  test_progress_indicators.py  test_scan_diagnostic.py  test_scanner_fix.py  test_setup.py  test_threading.py  utils.py  utils_historical_data.py  utils_indices.py  utils_progress.py
.claude/: settings.json
agents/: trading_agent.py
config/: daily_asx_options.yaml  daily_spx_options.yaml  ibkr_connection.py  phase5.yaml  scanner_settings.yaml  taad.service  trading_config.py
docs/: AUTOSELECT_IMPLEMENTATION_PLAN.md  DAEMON_GUIDE.md  DEVELOPMENT_HISTORY.md  FUTURE_IDEAS_TEMPLATE.md  IBKR_TRADE_IMPORT_GUIDE.md  LEARNING_CYCLE_REVIEW.md  LEARNING_MODULE_IMPROVEMENT_PLAN.md  LOG_ANALYSIS_2026-03-02_US.md  LOG_ANALYSIS_2026-03-03_US.md  OPERATIONS_GUIDE.md  POSITION_EXIT_REARCHITECTURE.md  Pivot to MCP.md  ROADMAP.md  SYSTEM_ANALYSIS.md  TAAD_Operations_Manual_v1.0.docx  TECHNICAL_REFERENCE.md  USER_GUIDE.md  ai-trading-research.md
migrations_backup_sqlite/: 02b0dcf1301b_add_scan_results_and_scan_opportunities_.py  0e6f54d2f4ee_add_market_context_phase_2_6c.py  1b70df4d97f7_add_trade_entry_snapshots_phase_2_6a.py  29ab28ce5e82_add_opportunity_lifecycle_tracking.py  56f454469066_add_position_snapshots_phase_2_6d.py  88c9a0f1e6aa_add_technical_indicators_phase_2_6b.py  97913c3b0e4d_initial_schema_creation.py  a1598d212799_add_decision_context_tracking.py  b7c05aaa2962_add_exit_snapshots_and_learning_views_.py  c4a1b2e3f567_add_staging_and_validation_columns_phase_4_1.py  d09ab52d9f4c_add_order_id_to_trades_table.py
scripts/: add_manual_trade_record.py  backfill_entry_snapshots.py  check_opportunity_status.py  check_status.sh  cleanup_docs.sh  cleanup_invalid_trades.py  create_database.py  demo_order_executor.py  demo_risk_governor.py  demo_risk_governor_simple.py  explore_ibkr_scanner.py  generate_operations_manual.py  mark_trade_executed.py  monitor_positions.py  (+14 more)
(+389 files in other folders)
